--- a/AvelourZenaire.css
+++ b/AvelourZenaire.css
@@ -17,11 +17,14 @@ body{
     padding: 0;
     image-rendering: auto;
 }
-
+#index{
+    text-decoration: none;
+}
 #heading {
     text-align: center;
     font-family: "Cinzel";
     font-size: 100px;
+    color: black;
 }
 
 #intro{
@@ -95,7 +98,7 @@ body{
 .logo:hover{
     transform: translateY(-1em) ;  
     border-color: black;
-    box-shadow: 0em 1em 1em -0.2em black;
+    box-shadow: 0em 1em 1em -0.2em #e5c07b;
 }
 
 
