--- a/AvelourZenaire.css
+++ b/AvelourZenaire.css
@@ -5,23 +5,26 @@ html, body {
     overflow-x: hidden;
 }
 
-body {
+/* Fixed background div for Android compatibility */
+.bg-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
     background-image: url("Images/Homepage.jpg");
     background-color: rgb(85, 49, 5);
-    background-position: center;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100%;
-    background-attachment: scroll; 
-    margin: 0;
-    padding: 0;
-    image-rendering: auto;
+    z-index: -1;
 }
 
-@media (min-width: 768px) {
-    body {
-        background-attachment: fixed;
-    }
+body {
+    background: transparent;
+    margin: 0;
+    padding: 0;
+    position: relative;
 }
 
 #index {
@@ -71,7 +74,6 @@ body {
 
 #h4 {
     font-family: "Shrikhand", serif;
-    
 }
 
 .caption {
