--- a/AvelourZenaire.css
+++ b/AvelourZenaire.css
@@ -12,7 +12,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100%;
-    background-attachment: scroll; 
+    background-attachment: fixed; 
     margin: 0;
     padding: 0;
     image-rendering: auto;
